2007-11-07  Kevin Cozens  <kcozens@cvs.gnome.org>

	* UI/UI.pm (interact): Set $value to initial value for PF_ADJUSTMENT.
	Fixes bug #494743.

2007-10-31  Kevin Cozens  <kcozens@cvs.gnome.org>

	* Gimp/Compat.pm (xlfd_size): Grab the first item in list of values
	returned from xlfd_unpack() when using XLFD font descriptions.

2007-09-05  Kevin Cozens  <kcozens@cvs.gnome.org>

	* .cvsignore
	* Net/.cvsignore
	* Gimp/.cvsignore
	* po/.cvsignore
	* UI/.cvsignore: Obsolete as of the switch from CVS to Subversion.

	* MAINTAINERS: Added due to enforced gnome-svn standards.

	* MANIFEST: Updated list of files.

2007-07-10  Kevin Cozens  <kcozens@cvs.gnome.org>

	* TODO: Removed item regarding adding POD info to gimpdoc.

	* gimpdoc: Added POD information based on man page created by
	Ben Gertzfield. Fixes bug #117349.

2007-07-10  Kevin Cozens  <kcozens@cvs.gnome.org>

	* examples/glowing_steel: Applied changes suggested by Sven Neumann
	in bug #310820.

2007-07-09  Kevin Cozens  <kcozens@cvs.gnome.org>

	* examples/glowing_steel: Changed previous fix. Check version number
	of GIMP to decide if extra parameter is needed. Applied the changes
	suggested by Spam Less. Fixes bug #310820.

2007-07-09  Kevin Cozens  <kcozens@cvs.gnome.org>

	* examples/glowing_steel: Removed extra parameter in call to mblur.

2007-03-26  Kevin Cozens  <kcozens@cvs.gnome.org>

	* Gimp/Compat.pm: Replaced xlfd_unpack() with a simpler version that
	actually works. Added the missing xlfd_size() routine.

	* Gimp/Fu.pm: Fixed some typographical and grammatical errors.
	Reminder: The notes about PF_FONT and what it returns needs updating.

2007-03-19  Kevin Cozens  <kcozens@cvs.gnome.org>

	* examples/burst
	* examples/centerguide
	* examples/colorhtml
	* examples/dataurl
	* examples/ditherize
	* examples/dots
	* examples/dust
	* examples/example-fu
	* examples/example-net
	* examples/example-oo
	* examples/fade-alpha
	* examples/feedback
	* examples/frame_filter
	* examples/frame_reshuffle